// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsChange should display the SettingsChange component with newOwner details 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1f23gi7-MuiPaper-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-ya5m4n-MuiTypography-root"
    >
      <mock-icon
        aria-hidden="true"
        classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-gxmw0o-MuiSvgIcon-root"
        focusable="false"
      />
      Previous signer
    </p>
    <div
      class="container"
    >
      <div
        class="avatarContainer"
        style="width: 40px; height: 40px;"
      >
        <div
          class="icon"
          style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMzI1IDQ4JSAyMiUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgyNDAgOTklIDQ5JSkiIGQ9Ik0xLDBoMXYxaC0xek02LDBoMXYxaC0xek0yLDBoMXYxaC0xek01LDBoMXYxaC0xek0zLDBoMXYxaC0xek00LDBoMXYxaC0xek0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0wLDJoMXYxaC0xek03LDJoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0yLDJoMXYxaC0xek01LDJoMXYxaC0xek0xLDNoMXYxaC0xek02LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0xLDVoMXYxaC0xek02LDVoMXYxaC0xek0yLDVoMXYxaC0xek01LDVoMXYxaC0xek0yLDdoMXYxaC0xek01LDdoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCgxNTUgOTUlIDU5JSkiIGQ9Ik0xLDFoMXYxaC0xek02LDFoMXYxaC0xek0zLDFoMXYxaC0xek00LDFoMXYxaC0xek0zLDJoMXYxaC0xek00LDJoMXYxaC0xek0xLDdoMXYxaC0xek02LDdoMXYxaC0xeiIvPjwvc3ZnPg==); width: 40px; height: 40px;"
        />
      </div>
      <div
        class="MuiBox-root css-1lchl8k"
      >
        <div
          class="MuiBox-root css-171onha"
          title="Bob"
        >
          <div
            class="MuiBox-root css-1o4wo1x"
          >
            Bob
          </div>
        </div>
        <div
          class="addressContainer"
        >
          <div
            class="MuiBox-root css-b5p5gz"
          >
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <span>
                0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045
              </span>
            </span>
          </div>
          <span
            aria-label="Copy to clipboard"
            class=""
            data-mui-internal-clone-element="true"
            style="cursor: pointer;"
          >
            <button
              aria-label="Copy to clipboard"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-nmr6e8-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-j1da6x-MuiSvgIcon-root"
                data-testid="copy-btn-icon"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </span>
          <div
            class="MuiBox-root css-yjghm1"
          >
            <button
              aria-label=""
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1o2vr87-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              data-testid="explorer-btn"
              href=""
              rel="noreferrer"
              tabindex="0"
              target="_blank"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-11dtfly-MuiSvgIcon-root"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 container css-1bq3jbz-MuiPaper-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1ab5q2h-MuiTypography-root"
    >
      <mock-icon
        aria-hidden="true"
        classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-gxmw0o-MuiSvgIcon-root"
        focusable="false"
      />
      New signer
    </p>
    <div
      class="container"
    >
      <div
        class="avatarContainer"
        style="width: 32px; height: 32px;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1sj56zx-MuiSkeleton-root"
          style="width: 32px; height: 32px;"
        />
      </div>
      <div
        class="MuiBox-root css-1lchl8k"
      >
        <div
          class="MuiBox-root css-171onha"
          title="Alice"
        >
          <div
            class="MuiBox-root css-1o4wo1x"
          >
            Alice
          </div>
        </div>
        <div
          class="addressContainer"
        >
          <div
            class="MuiBox-root css-b5p5gz"
          >
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <span>
                0x0000000000000000
              </span>
            </span>
          </div>
          <span
            aria-label="Copy to clipboard"
            class=""
            data-mui-internal-clone-element="true"
            style="cursor: pointer;"
          >
            <button
              aria-label="Copy to clipboard"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-nmr6e8-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-j1da6x-MuiSvgIcon-root"
                data-testid="copy-btn-icon"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </span>
          <div
            class="MuiBox-root css-yjghm1"
          >
            <button
              aria-label=""
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1o2vr87-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              data-testid="explorer-btn"
              href=""
              rel="noreferrer"
              tabindex="0"
              target="_blank"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-11dtfly-MuiSvgIcon-root"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-da8pia-MuiDivider-root"
  />
</div>
`;

exports[`SettingsChange should display the SettingsChange component with owner details 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 container css-1bq3jbz-MuiPaper-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1ab5q2h-MuiTypography-root"
    >
      <mock-icon
        aria-hidden="true"
        classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-gxmw0o-MuiSvgIcon-root"
        focusable="false"
      />
      New signer
    </p>
    <div
      class="container"
    >
      <div
        class="avatarContainer"
        style="width: 32px; height: 32px;"
      >
        <div
          class="icon"
          style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMzI1IDQ4JSAyMiUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgyNDAgOTklIDQ5JSkiIGQ9Ik0xLDBoMXYxaC0xek02LDBoMXYxaC0xek0yLDBoMXYxaC0xek01LDBoMXYxaC0xek0zLDBoMXYxaC0xek00LDBoMXYxaC0xek0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0wLDJoMXYxaC0xek03LDJoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0yLDJoMXYxaC0xek01LDJoMXYxaC0xek0xLDNoMXYxaC0xek02LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0xLDVoMXYxaC0xek02LDVoMXYxaC0xek0yLDVoMXYxaC0xek01LDVoMXYxaC0xek0yLDdoMXYxaC0xek01LDdoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCgxNTUgOTUlIDU5JSkiIGQ9Ik0xLDFoMXYxaC0xek02LDFoMXYxaC0xek0zLDFoMXYxaC0xek00LDFoMXYxaC0xek0zLDJoMXYxaC0xek00LDJoMXYxaC0xek0xLDdoMXYxaC0xek02LDdoMXYxaC0xeiIvPjwvc3ZnPg==); width: 32px; height: 32px;"
        />
      </div>
      <div
        class="MuiBox-root css-1lchl8k"
      >
        <div
          class="MuiBox-root css-171onha"
          title="Nevinha"
        >
          <div
            class="MuiBox-root css-1o4wo1x"
          >
            Nevinha
          </div>
        </div>
        <div
          class="addressContainer"
        >
          <div
            class="MuiBox-root css-b5p5gz"
          >
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <span>
                0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045
              </span>
            </span>
          </div>
          <span
            aria-label="Copy to clipboard"
            class=""
            data-mui-internal-clone-element="true"
            style="cursor: pointer;"
          >
            <button
              aria-label="Copy to clipboard"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-nmr6e8-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-j1da6x-MuiSvgIcon-root"
                data-testid="copy-btn-icon"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </span>
          <div
            class="MuiBox-root css-yjghm1"
          >
            <button
              aria-label=""
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1o2vr87-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              data-testid="explorer-btn"
              href=""
              rel="noreferrer"
              tabindex="0"
              target="_blank"
              type="button"
            >
              <mock-icon
                aria-hidden="true"
                classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-11dtfly-MuiSvgIcon-root"
                focusable="false"
              />
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-da8pia-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-0"
  >
    <p
      class="MuiTypography-root MuiTypography-body2 css-ceebrx-MuiTypography-root"
    >
      Any transaction requires the confirmation of:
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1pqjor9-MuiTypography-root"
    >
      <b>
        1
      </b>
       out of
       
      <b>
        1
         signers
      </b>
    </p>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-da8pia-MuiDivider-root"
  />
</div>
`;
